--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
-    "mongoose": "^5.4.5"
+    "mongoose": "^5.4.5",
+    "swagger-jsdoc": "^3.2.6"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
