--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ MONGO_DEV_CONN_URL=mongodb://localhost:27017/test
 MONGO_LOCAL_CONN_URL=mongodb://localhost:27017/test
 MONGO_DB_NAME=test
 NODE_ENV=development
-
+PORT=3000
 JWT_SECRET=suthaSecret
 JWT_EXPIRES_IN=2d
 JWT_ISSUER=
