--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "nodejs-test",
+  "name": "Apple-POS",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cross-env nodemon index.js"
+    "test-mocha": "mocha  --exit",
+    "dev": "cross-env nodemon index.js",
+    "pretest": "eslint --fix --ignore-path .gitignore --ignore-pattern 'coverage/*' .",
+    "test": "jest --forceExit",
+    "coverage": "jest  --collectCoverageFrom=**.js --coverage --forceExit"
   },
   "keywords": [],
   "author": "",
@@ -16,12 +19,21 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
-    "mongoose": "^5.4.5",
+    "morgan": "^1.9.1",
+    "mongoose": "^5.4.6",
     "swagger-jsdoc": "^3.2.6"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "cross-env": "^5.2.0",
-    "morgan": "^1.9.1",
-    "nodemon": "^1.18.9"
+    "eslint": "^5.12.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-node": "^4.0.0",
+    "eslint-plugin-jest": "^22.1.3",
+    "jest": "^23.6.0",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.9",
+    "should": "^13.2.3",
+    "supertest": "^3.4.2"
   }
 }
