--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
-    "morgan": "^1.9.1",
     "mongoose": "^5.4.6",
-    "swagger-jsdoc": "^3.2.6"
+    "morgan": "^1.9.1",
+    "swagger-jsdoc": "^3.2.6",
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
