--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "dependencies": {
     "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.6",
+    "mongoose-unique-validator": "^2.0.2",
     "morgan": "^1.9.1",
     "swagger-jsdoc": "^3.2.6",
     "validator": "^10.11.0"
