--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "pretest": "eslint --fix . --ignore-path .gitignore --ignore-pattern 'coverage/*' --ignore-pattern 'public/swagger3/*'",
     "testJest": "jest --forceExit",
     "test": "NODE_ENV=test mocha test/ --recursive --exit",
-    "coverage": "NODE_ENV=test nyc mocha test/  --recursive --exit --collectCoverageFrom=**.js --coverage",
+    "coverage": "NODE_ENV=test nyc mocha test/  --recursive --exit --collectCoverageFrom=**.js --coverage"
   },
   "keywords": [],
   "author": "",
